# desktop-pet

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Cat.tsx  ChatBubble.tsx  ChatInput.tsx  Notepad.tsx  Reminder.tsx  Settings.tsx  Timer.tsx  Toolbar.tsx
src/hooks/: useChat.ts
src/styles/: app.css  cat.css  toolbar.css  tools.css
src/utils/: api.ts
